added navbar and logo changes and other mior fixs

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,7 +1,3 @@
-/* * {
-  border: solid;
-  border-color: #f77062;
-} */
 body {
   background: #000;
   width: 100%;
@@ -12,9 +8,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
